<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/note_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/drawer"
        >
        <ImageView
            android:id="@+id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_info"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            />
        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            tools:ignore="ContentDescription"
            app:tint="@color/white"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_resume"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="2dp"
        android:minLines="8"
        android:maxLines="16"
        android:lines="16"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="@color/black"
        android:padding="6dp"
        android:layout_marginTop="30dp"
        android:textSize="13sp"
        android:textAlignment="center"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/instagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icons8_instagram"
            />
        <ImageView
            android:id="@+id/telegram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icons_telegram"
            android:layout_toEndOf="@id/instagram"
            android:layout_marginStart="20dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_app"
        android:textColor="@color/black"
        android:padding="6dp"
        android:layout_marginTop="30dp"
        android:textSize="13sp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/myEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/purple_700"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        />

</LinearLayout>