<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_layout"
    android:layout_gravity="bottom"
    >

    <ImageView
        android:id="@+id/close_dialog"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_close"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription"
        />
    <TextView
        android:id="@+id/textView_subject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:theme="@style/Widget.AppCompat.EditText"
        android:maxLength="25"
        android:background="@color/note_bg"
        android:hint="@string/subjects_hint"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/editText_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:lines="10"
        android:theme="@style/Widget.AppCompat.EditText"
        android:padding="4dp"
        android:hint="@string/hint"
        android:textAlignment="gravity"
        android:gravity="start"
        android:focusable="true"
        android:bufferType="editable"
        android:cursorVisible="true"
        android:textColorLink="@color/purple_700"
        android:background="@color/note_bg"
        android:scrollbars="horizontal"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save_note"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>