<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.CreateNoteActivity"
    >
    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_note"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/back"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/textView_save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_note"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/more"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            />
        <ImageView
            android:id="@+id/more"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >
        <RelativeLayout
            android:id="@+id/sub_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:id="@+id/editText_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:hint="@string/subjects_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:layout_toStartOf="@id/priority"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="25"
                />
            <ImageView
                android:id="@+id/priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_flag"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/editText_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.AppCompat.EditText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:hint="@string/hint"
            android:textColorHint="@color/hint"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:gravity="start"
            android:focusable="true"
            android:bufferType="editable"
            android:cursorVisible="true"
            android:textColorLink="@color/purple_700"
            android:background="@color/note_bg"
            android:scrollbars="horizontal"
            android:textSize="14sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/more_layout"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        >

    </LinearLayout>
    <LinearLayout
        android:id="@+id/priority_layout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/more_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/HighPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HighPriority"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            app:drawableEndCompat="@drawable/ic_flag"
            app:drawableTint="@color/priority_color_red"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/line_view"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/MediumPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MediumPriority"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:drawableEndCompat="@drawable/ic_flag"
            app:drawableTint="@color/priority_color_yellow"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_view"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/LowPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LowPriority"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:drawableEndCompat="@drawable/ic_flag"
            app:drawableTint="@color/priority_color_green"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_view"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/NoPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NoPriority"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:drawableEndCompat="@drawable/ic_flag"
            app:drawableTint="@color/priority_color_black" />

    </LinearLayout>

</RelativeLayout>