<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".views.UserProfileActivity"
    >
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_back"
        app:tint="#FFFFFF"
        android:padding="4dp"
        android:background="@color/user_profile_bg"
        tools:ignore="ContentDescription"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >
        <TextView
            android:id="@+id/textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rare star"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/cardView_profile"
            />
        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_username"
            android:textSize="16sp"
            android:text="example@gmail.com"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/cardView_profile"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/black"
            >
            <ImageView
                android:id="@+id/imageView_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_supervised_user_circle_24"
                tools:ignore="ContentDescription"
                android:scaleType="fitXY"
                />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/user_profile_bg"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:id="@+id/allNote_Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/textView_allNote"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="16"
                android:maxLength="3"
                android:textColor="@color/textViews_Color"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/textViews_Color"
                android:textSize="14sp"
                android:layout_below="@id/textView_allNote"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tasks_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/textView_tasks"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/zero"
                android:maxLength="3"
                android:textColor="@color/textViews_Color"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasks"
                android:textColor="@color/textViews_Color"
                android:textSize="14sp"
                android:layout_below="@id/textView_tasks"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/note_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/textView_note"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/zero"
                android:maxLength="3"
                android:textColor="@color/textViews_Color"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textColor="@color/textViews_Color"
                android:textSize="14sp"
                android:layout_below="@id/textView_note"
                />
    </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:checked="true"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_notifications_none"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/notify"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:splitTrack="true"
        android:background="@drawable/switch_bg_layout"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:checked="false"
        android:cursorVisible="true"
        android:drawableStart="@drawable/dark_mode_24"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:splitTrack="true"
        android:background="@drawable/switch_bg_layout"
        android:text="@string/darkMode"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/setting_layout"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <RelativeLayout
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:id="@+id/ic_about"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_info"
                app:tint="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_program"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_toEndOf="@id/ic_about"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:id="@+id/ic_contact_us"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/baseline_contact_support_24"
                app:tint="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_toEndOf="@id/ic_contact_us"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:id="@+id/ic_setting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_settings"
                app:tint="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_toEndOf="@id/ic_setting"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                />
        </RelativeLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/user_profile_bg"
        android:background="@color/user_profile_bg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

    </androidx.cardview.widget.CardView>

</LinearLayout>