<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ShowNoteActivity"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/drawer"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/textView_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            tools:text="@string/subjects"
            android:textSize="16sp"
            android:textColor="@color/textViews_Color"
            />
        <TextView
            android:id="@+id/textView_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/newNote"
            android:textColor="@color/textViews_Color"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:text="@string/priority"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:background="@color/note_bg"
        />
    <TextView
        android:id="@+id/textView_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:background="@color/note_bg"
        />
    <TextView
        android:id="@+id/textView_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="400dp"
        tools:text="@string/subjects"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"
        android:gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:textAlignment="gravity"
        android:background="@color/note_bg"
        />
</LinearLayout>